CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(BinaryThreshold)


FIND_PACKAGE(ITK)

IF(ITK_FOUND) 
    INCLUDE(${ITK_USE_FILE})

ELSE(ITK_FOUND) 
    MESSAGE(FATAL_ERROR 
            "ITK not found. Please set ITK_DIR.") 
ENDIF(ITK_FOUND)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin)

ADD_EXECUTABLE(BinaryThreshold BinaryThreshold.cxx )
TARGET_LINK_LIBRARIES(BinaryThreshold  ${ITK_LIBRARIES})